assets/css/main.css
body {

}

body.modal-open {
    padding-right: 0 !important;
}

* {
    outline: none !important;
}

h1 {
    margin-top: 0;
}

h1.page-header {
    margin-top: 20px;
}

.is-guest #page-wrapper {
    margin-left: 0;
}

.is-guest .sidebar {
    display: none;    
}

.is-guest .breadcrumb {
    left: 0;
}

/**
 * File preview kartik
 */

.file-preview-frame {
    height: auto;
}

.images-index .file-input .glyphicon {
    padding-right: 5px;
}

.images-index .file-input {
    margin-bottom: 50px;
    display: block;
}

/**
 *  Gridview
 */

.floatThead-wrapper {
    border-top: 1px solid #DDD;
}


/**
 * Sortable gridview
 */

.sortable .table tbody tr td:first-child {
    padding: 0;
    text-align: center;
    vertical-align: middle;;
}

.sortable .table .empty {
    padding: 8px;
}

.sortable .handle {
    font-size: 17px;
    padding: 9px;
    color: #999999;
}

.sortable .ui-sortable-handle {
    font-size: 17px;
    padding: 9px;
    color: #333333;
}

.sortable .ui-sortable-handle:hover {
    cursor: move;
}


/**
 * Font awesome
 * @todo Add class
 */

.fa {
    font-size: 26px;
    padding: 0 2px;
}

.fa-btn-icon {
    font-size: 22px !important;
    padding-right: 4px;
}

.table .glyphicon {
    font-size: 18px;
    padding: 0 2px;
}

.sidebar-nav .glyphicon {
    font-size: 16px;
    padding: 3px 2px 0 0;
}

.icon-disabled {
    color: #ccc;
}

.icon-active {
    color: #3c763d;  
}

.icon-gray {
    color: #ccc;
}

.icon-blue {
    color: #337ab7;
}

/**
 * CKEditor
 */

.cke_dialog_page_contents a.cke_dialog_ui_button {
    display: block !important;
}

/**
 * 	Top menu
 */

.navbar {
	margin-bottom: 0;
    border: none;
}

.navbar-top-links {
    font-size: 18px;
}

.navbar-top-links li {
    display: inline-block;
}

.navbar-top-links > li > a {
    padding: 10px 12px;
    color: #FFFFFF;
}

.navbar-top-links > li > a:hover {
    color: #000;
}

.navbar-brand {
    font-size: 28px;
    height: auto;
    padding: 0;
}

.navbar-brand .brand-logo {
    position: relative;
    top: 2px;
    height: 45px;
}


.navbar-inverse .navbar-brand {
    color: #FFF;
}

/**
 * Tabs
 */

.tab-content {
    margin-top: 20px;
}

.tab-content .page-header:first-child {
    margin-top: 0;
}

a[data-toggle="tab"] i.fa {
    font-size: 18px;
}

/**
 * Select 2
 */

.input-group .select2-container--krajee {
    width: 100% !important;
}


/**
 * 	Table
 */

.table a.edit-model {
	color: #333;
}

.table a.edit-model:hover,
.table a.edit-model:focus {
	text-decoration: none;
}

.table a {
    display: inline-block;
}

/**
 * 	Side menu
 */

.sidebar {
	position: fixed;
	margin-top: 50px;
}

.sidebar .panel-default {
    border: none;
    background: none;
}

.sidebar .nav-stacked > li + li {
    margin-top: 0;
}

.sidebar .nav-pills > li.active > a,
.sidebar .nav-pills > li.active > a:hover,
.sidebar .nav-pills > li.active > a:focus {
    background-color: #EEEEEE;
    color: #428bca;
}

.sidebar .kv-sidenav {
    position: relative;
    overflow: hidden;
    height: 100%;
    max-height: auto;
}

.sidebar .kv-sidenav li a {
    border: none;
}

.sidebar .kv-sidenav .active > ul {
    background: none
}

.sidebar .kv-sidenav .active > ul li a {
    padding-left: 57px;
}

.sidebar .panel {
    box-shadow: none;
}

.sidebar .avatar {
    widht: 100%;
    padding: 20px;
    font-weight: bold;
    font-size: 18px;
    float: left;
    width: 100%;
}

.sidebar .avatar img {
    border-radius: 50%;
    width: 60px;
    float: left;
}

.sidebar .avatar div {
    float: left;
    margin-left: 12px;
    margin-top: 14px;
}

/**
 * Sortable images
 */

.sortable-container {
    padding-top: 15px;
    padding-bottom: 15px;
    border: none !important;
}

/**
 * Forms
 */

form .buttons {
    margin-top: 50px;
}

form .checkboxList label {
    font-weight: normal;
    width: 100%;
}

form .checkboxList label input {
    margin-right: 4px;
}

/**
 * Checlboxlist
 */
form .checkboxList label {
    font-weight: normal;
    width: 100%;
}

form .checkboxList label input {
    margin-right: 4px;
}


/**
 * 	Breadcrumbs
 */

.breadcrumb {
	border-bottom: 1px solid #e5e5e5;
	border-radius: 0;
    left: 251px;
    position: fixed;
    top: 51px;
    z-index: 1002;
    margin-bottom: 0;
    width: 100%;

    /*
    padding: 0;
    overflow: hidden;
    */

}

.breadcrumb-padding {
    padding-top: 110px !important;
}

/*
.breadcrumb > li + li:before {
    content: none;
}

.breadcrumb li {
    float: left;
    margin: 0 .5em 0 1em;
}

.breadcrumb li a {
    background: #ddd;
    padding: .7em 1em;
    float: left;
    text-decoration: none;
    color: #444;
    text-shadow: 0 1px 0 rgba(255,255,255,.5);
    position: relative;
}

.breadcrumb a:hover{
    background: #428bca;
    color: #FFFFFF;
}

.breadcrumb a::before{
    content: "";
    position: absolute;
    top: 50%;
    margin-top: -1.5em;
    border-width: 1.5em 0 1.5em 1em;
    border-style: solid;
    border-color: #ddd #ddd #ddd transparent;
    left: -1em;
}

.breadcrumb a:hover::before{
    border-color: #428bca #428bca #428bca transparent;
}

.breadcrumb a::after{
    content: "";
    position: absolute;
    top: 50%;
    margin-top: -1.5em;
    border-top: 1.5em solid transparent;
    border-bottom: 1.5em solid transparent;
    border-left: 1em solid #ddd;
    right: -1em;
}

.breadcrumb a:hover::after{
    border-left-color: #428bca;
}

.breadcrumb .current,
.breadcrumb .current:hover{
    font-weight: bold;
    background: none;
}

.breadcrumb .current::after,
.breadcrumb .current::before{
    content: normal;
}
*/


/* Anchor position
ol.sortable li {
    padding-top: 90px;
    margin-top: -90px;
}
*/

#page-wrapper {
	padding-top: 50px;
    padding-bottom: 120px;
    min-height: 100%;
    position: relative;
}

.wrap {
	padding: 0;
    margin: 0;
    height: 100%;
}

.footer {
    background-color: #f5f5f5;
    border-top: 1px solid #ddd;
    position: absolute;
    width: 100%;
    bottom: 0;
    left: 0;
    padding: 20px 15px;
}
/* ... */

